--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,9 @@ import SongDisplaySkeleton from "@/components/SongDisplay/SongDisplaySkeleton.as
 	}
 
 	.webrings {
+		padding: var(--size-s);
 		gap: var(--size-m);
 		max-width: fit-content;
+		align-items: center;
 	}
 </style>
