--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -3,6 +3,8 @@ import Main from "@/layouts/Main.astro";
 import { SteamWebAPI } from "@/lib/steam/SteamWebAPI";
 
 const api = new SteamWebAPI();
+// const data = await api.requestGameAchievements("35140");
+// console.log(data);
 ---
 
 <Main title="Test page">
