fix: Small fixes

--- a/src/pages/steam/[appid].astro
+++ b/src/pages/steam/[appid].astro
@@ -78,7 +78,7 @@ const logoPositioning = (await db.select().from(SteamWebAPIGameLogoPositioning).
 			<h2>Achievements</h2>
 			<div class="disclaimer rflex">
 				<span>powered by</span>
-				<a href="https://partner.steamgames.com/">
+				<a href="https://partner.steamgames.com/" target="_blank">
 					<SteamworksLogo class="steamworks-logo" />
 				</a>
 			</div>
