--- a/src/pages/steam/index.astro
+++ b/src/pages/steam/index.astro
@@ -13,7 +13,7 @@ const games = await db.select().from(SteamWebAPIPlayerOwnedGames);
 		<h1>My Steam Games</h1>
 		<div class="disclaimer rflex">
 			<span>powered by</span>
-			<a href="https://partner.steamgames.com/">
+			<a href="https://partner.steamgames.com/" target="_blank">
 				<SteamworksLogo class="steamworks-logo" />
 			</a>
 		</div>
