--- a/src/pages/steam/index.astro
+++ b/src/pages/steam/index.astro
@@ -32,7 +32,7 @@ const games = await db.select().from(SteamWebAPIPlayerOwnedGames);
 
 	.games {
 		flex-wrap: wrap;
-		gap: var(--size-xl);
+		gap: var(--size-l);
 		justify-content: center;
 	}
 
