--- a/src/pages/steam/[appid].astro
+++ b/src/pages/steam/[appid].astro
@@ -24,47 +24,33 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 ---
 
 <Main title={game.name}>
-	<div class="hero-wrapper-portrait rflex">
-		<Image
-			class="hero"
-			src={steamAPI.getGameImage(game.appid, "portrait")}
-			alt=`Game portrait header for ${game.name}.`
-			width="600"
-			height="900"
-		/>
-		<div class="game-infos card">
-			<h1 class="game-title">{game.name}</h1>
-			<ClockFadingIcon />
-			<span>{(game.playtime_forever / 60).toFixed(1)} hours</span>
-			<AwardIcon class:list={[isComplete && "award-icon-golden"]} />
-			<span>{`${achievedCount}/${achievements.length}`} achievements</span>
+	<section class="hero cflex">
+		<div class="banner-wrapper">
+			<Image
+				class="banner"
+				src={steamAPI.getGameImage(game.appid, "library_hero")}
+				alt=`Game panorama header for ${game.name}.`
+				width="1920"
+				height="620"
+				onerror=`this.src="${headerPlaceholder.src}";`
+			/>
+			<Image
+				class="logo"
+				src={steamAPI.getGameImage(game.appid, "logo")}
+				alt=`Game logo for ${game.name}.`
+				width="640"
+				height="160"
+				server:defer
+				onerror="this.style.display='none';"
+				style={
+					`top: ${logoPositioning?.y || 50}%;
+					left: ${logoPositioning?.x || 50}%;
+					transform: translate(-${logoPositioning?.x || 50}%, -${logoPositioning?.y || 50}%);`
+				}
+			/>
 		</div>
-	</div>
-	<div class="hero-wrapper-wide">
-		<Image
-			class="hero"
-			src={steamAPI.getGameImage(game.appid, "library_hero")}
-			alt=`Game panorama header for ${game.name}.`
-			width="1920"
-			height="620"
-			onerror=`this.src="${headerPlaceholder.src}";`
-		/>
-		<Image
-			class="logo"
-			src={steamAPI.getGameImage(game.appid, "logo")}
-			alt=`Game logo for ${game.name}.`
-			width="640"
-			height="160"
-			server:defer
-			onerror="this.style.display='none';"
-			style={
-				`top: ${logoPositioning?.y || 50}%;
-				left: ${logoPositioning?.x || 50}%;
-				transform: translate(-${logoPositioning?.x || 50}%, -${logoPositioning?.y || 50}%);`
-			}
-		/>
-		<div class="game-footer rflex">
-			<h1 class="game-title">{game.name}</h1>
+		<div class="hero-footer rflex">
+			<h1 class="hero-title">{game.name}</h1>
 			<div class="game-infos rflex">
 				<div class="info-wrapper playtime rflex">
 					<ClockFadingIcon />
@@ -76,7 +62,7 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<section class="achievement-section" data-view="table">
 		<div class="heading rflex">
 			<h2>Achievements</h2>
@@ -95,7 +81,6 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 		<div class="achievements-wrapper cflex">
 			{achievements.length > 0 ? (
 				achievements.sort((a, b) => Number(b.achieved) - Number(a.achieved)).map((achievement) => (
-					// maybe add a grid view for the achievements with icon-only
 					<Achievement achievement={achievement} />
 				))
 			) : (
@@ -106,69 +91,36 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 </Main>
 
 <style>
-	.hero-wrapper-wide {
+	.hero {
 		display: flex;
 		position: relative;
 		max-width: 1200px;
 		box-shadow: 
-			0px -4px 16px -4px rgba(255, 255, 255, .1),
+			0px -4px 8px 0px rgba(255, 255, 255, .1),
 			inset 0 0 8px 4px rgba(0, 0, 0, .5);
 		margin-bottom: var(--size-xl);
-	}
-
-	.hero-wrapper-portrait {
-		display: none;
-		gap: var(--size-m);
-		margin-bottom: var(--size-xl);
-		align-items: center;
-		align-self: center;
-	}
-
-	.hero-wrapper-portrait .hero {
-		max-width: clamp(128px, 40vw, 320px);
-		height: auto;
-		box-shadow: 
-			0px -4px 16px -4px rgba(255, 255, 255, .1),
-			inset 0 0 8px 4px rgba(0, 0, 0, .5);
-	}
-
-	.hero-wrapper-portrait .game-infos {
-		display: grid;
-		grid-template-columns: 24px 1fr;
-		column-gap: var(--size-xs);
-		row-gap: var(--size-2xs);
-		padding: var(--size-m);
 		min-width: min-content;
-		width: fit-content
 	}
 
-	.hero-wrapper-portrait .game-infos span {
-		align-self: center;
-		/* text-wrap: nowrap; */
+	.banner-wrapper {
+		position: relative;
 	}
 
-	.hero-wrapper-portrait .game-infos h1 {
-		grid-column: span 2;
-		font-size: clamp(1.5em, 6vw, 2em);
-		margin-bottom: var(--size-xs);
-		color: var(--text);
-	}
-
-	.hero-wrapper-wide .hero {
+	.banner-wrapper .banner {
 		position: relative;
 		z-index: -1;
 		max-width: 100%;
 		height: auto;
 	}
 
-	.hero-wrapper-wide .logo {
+	.banner-wrapper .logo {
 		position: absolute;
-		max-width: clamp(192px, 30vw, 320px);
+		max-width: clamp(64px, 30vw, 320px);
 		height: auto;
 		z-index: 2;
 	}
 
-	.hero-wrapper-wide .game-footer {
+	.hero-footer {
 		position: absolute;
 		bottom: 0;
 		max-width: 100%;
@@ -180,29 +132,37 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 		backdrop-filter: blur(10px);
 		padding: var(--size-xs) var(--size-m);
 		justify-content: space-between;
+		flex-wrap: wrap;
+		min-width: min-content;
+		gap: var(--size-s);
 	}
 
-	.hero-wrapper-wide .game-footer h1 {
-		font-size: 2em;
+	.hero-footer h1 {
+		font-size: clamp(1.25em, 6vw, 2em);
 		font-weight: 300;
 		color: var(--text);
 	}
 
-	.hero-wrapper-wide .game-footer .game-infos {
-		gap: var(--size-m);
+	.hero-footer .game-infos {
 		align-items: center;
+		flex-wrap: wrap;
+		gap: var(--size-xs);
 	}
 
-	.hero-wrapper-wide .game-footer .info-wrapper {
+	.hero-footer .game-infos .playtime {
+		margin-right: var(--size-m);
+	}
+
+	.hero-footer .info-wrapper {
 		gap: var(--size-xs);
 		align-items: center;
 	}
 
-	.hero-wrapper-wide .game-footer .info-wrapper span {
+	.hero-footer .info-wrapper span {
 		text-wrap: nowrap;
 	}
 
-	.hero-wrapper-wide .award-icon-golden {
+	.award-icon-golden {
 		stroke: var(--warning);
 	}
 
@@ -231,20 +191,12 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 		}
 	}
 
-	/* .achievement-section[data-view="grid"] .achievements-wrapper :global(.achievement p) {
-		display: none;
-	} */
-
-	/* .achievement-section[data-view="grid"] .achievements-wrapper :global(.achievement .unlock-time) {
-		display: none;
-	} */
-
 	.heading {
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: var(--size-xl);
 		flex-wrap: wrap;
-		gap: var(--size-xs);
+		gap: var(--size-m);
 	}
 
 	.disclaimer {
@@ -279,11 +231,15 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 		border-radius: var(--br-soft);
 		align-items: center;
 		border: 1px solid var(--border-muted);
+		transition: 100ms all ease;
+		user-select: none;
 	}
 
 	.grid-toggle-wrapper:hover {
 		cursor: pointer;
-		background-color: var(--bg-light);
+		/* background-color: var(--bg-light); */
+		border: 1px solid var(--primary);
+		background-color: var(--bg-primary);
 	}
 
 	.grid-toggle-wrapper .table-icon {
@@ -299,11 +255,8 @@ const headerPlaceholder = await getImage({src: HeaderPlaceholder, format: "webp"
 	}
 
 	@media (max-width: 700px) {
-		.hero-wrapper-wide {
-			display: none;
-		}
-		.hero-wrapper-portrait {
-			display: flex;
+		.hero-footer {
+			position: relative;
 		}
 	}
 </style>
