fix: Hide steam pages link

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,11 +6,11 @@ import SteamIcon from "@/assets/icons/steam.svg";
 	<a class="home-link-container rflex" href="/">
 		<span class="home-link-text">Dominic Brauer</span>
 	</a>
-	<div class="internal-links-wrapper">
+	<!--<div class="internal-links-wrapper">
 		<a class="steam" href="/steam">
 			<SteamIcon />
 		</a>
-	</div>
+	</div>-->
 	<!-- <div class="external-links-wrapper"></div> -->
 </div>
 
