--- a/src/pages/steam/[appid].astro
+++ b/src/pages/steam/[appid].astro
@@ -13,7 +13,7 @@ const { appid } = Astro.params;
 const game = (await db.select().from(SteamWebAPIPlayerOwnedGames).where(eq(SteamWebAPIPlayerOwnedGames.appid, appid!)))[0];
 if (!game) return Astro.redirect("/404?error=INVALID_APPID");
 console.log(appid, game);
-const achievements = (await db.select().from(SteamWebAPIAchievements).where(eq(SteamWebAPIAchievements.appid, appid!)));
+const achievements = await db.select().from(SteamWebAPIAchievements).where(eq(SteamWebAPIAchievements.appid, appid!));
 console.log(achievements.length);
 const steamAPI = new SteamWebAPI();
 
