--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,6 @@ import Main from "@/layouts/Main.astro";
 import WebringBadge from "astro-webrings/badge";
 import SongDisplay from "@/components/SongDisplay/SongDisplay.astro";
 import SongDisplaySkeleton from "@/components/SongDisplay/SongDisplaySkeleton.astro";
-
-import { mogus } from "@/lib/cache.ts";
-
-console.log(mogus.get("mogus"));
 ---
 
 <Main title="Dominic Brauer">
@@ -19,7 +15,11 @@ console.log(mogus.get("mogus"));
 		</SongDisplay>
 		<div class="webrings rflex card">
 			<WebringBadge site="dominicbrauer.dev" ring="built-with-astro" />
-			<WebringBadge site="dominicbrauer.dev" ring="friends-of-houston" animated />
+			<WebringBadge
+				site="dominicbrauer.dev"
+				ring="friends-of-houston"
+				animated
+			/>
 		</div>
 	</section>
 </Main>
