--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,11 +6,11 @@ import SteamIcon from "@/assets/icons/steam.svg";
 	<a class="home-link-container rflex" href="/">
 		<span class="home-link-text">Dominic Brauer</span>
 	</a>
-	<!--<div class="internal-links-wrapper">
+	<div class="internal-links-wrapper">
 		<a class="steam" href="/steam">
 			<SteamIcon />
 		</a>
-	</div>-->
+	</div>
 	<!-- <div class="external-links-wrapper"></div> -->
 </div>
 
@@ -39,7 +39,7 @@ import SteamIcon from "@/assets/icons/steam.svg";
 		height: fit-content;
 		align-items: center;
 	}
-	
+
 	.home-link-container::before,
 	.home-link-container::after {
 		content: '';
@@ -49,12 +49,12 @@ import SteamIcon from "@/assets/icons/steam.svg";
 		background-color: var(--primary);
 		transition: 250ms all ease-out;
 	}
-	
+
 	.home-link-container::before {
 		top: -.5rem;
 		left: 0;
 	}
-	
+
 	.home-link-container::after {
 		bottom: -.5rem;
 		right: 0;
