--- a/src/pages/steam/index.astro
+++ b/src/pages/steam/index.astro
@@ -3,8 +3,13 @@ import GameCard from "@/components/Steam/GameCard.astro";
 import Main from "@/layouts/Main.astro";
 import SteamworksLogo from "@/assets/icons/steamworks.svg";
 import { steam } from "@/actions/steam";
+import type { SteamWebAPIPlayerOwnedGame } from "@/lib/steam/SteamWebAPI";
 
 const { data: games, error } = await Astro.callAction(steam.getGames, {});
+
+
+
+// const games: SteamWebAPIPlayerOwnedGame[] = [];
 
 if (error) {
 	return Astro.redirect("/500?error=ACTION_ERROR");
@@ -22,7 +27,7 @@ if (error) {
 		</div>
 	</div>
 	<div class="games rflex">
-		{games?.sort((a, b) => b.playtime_forever - a.playtime_forever).map((game) => (
+		{games?.sort((a, b) => b.playtime_forever - a.playtime_forever).map(async (game) => (
 			<GameCard game={game} />
 		))}
 	</div>
